// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autolinks (extension) <https://github.github.com/gfm/#example-621> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "www.commonmark.org",
              "pos": 0,
              "end": 18,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "http://www.commonmark.org",
          },
          "pos": 0,
          "end": 18,
        },
      ],
      "pos": 0,
      "end": 18,
    },
  ],
  "pos": 0,
  "end": 18,
}
`;

exports[`Autolinks (extension) <https://github.github.com/gfm/#example-622> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "Visit ",
          "pos": 0,
          "end": 6,
        },
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "www.commonmark.org/help",
              "pos": 6,
              "end": 29,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "http://www.commonmark.org/help",
          },
          "pos": 6,
          "end": 29,
        },
        Run {
          "kind": Run,
          "text": " for more information.",
          "pos": 29,
          "end": 51,
        },
      ],
      "pos": 0,
      "end": 51,
    },
  ],
  "pos": 0,
  "end": 51,
}
`;

exports[`Autolinks (extension) <https://github.github.com/gfm/#example-623> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "Visit ",
          "pos": 0,
          "end": 6,
        },
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "www.commonmark.org",
              "pos": 6,
              "end": 24,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "http://www.commonmark.org",
          },
          "pos": 6,
          "end": 24,
        },
        Run {
          "kind": Run,
          "text": ".",
          "pos": 24,
          "end": 25,
        },
      ],
      "pos": 0,
      "end": 25,
    },
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "Visit ",
          "pos": 27,
          "end": 33,
        },
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "www.commonmark.org/a.b",
              "pos": 33,
              "end": 55,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "http://www.commonmark.org/a.b",
          },
          "pos": 33,
          "end": 55,
        },
        Run {
          "kind": Run,
          "text": ".",
          "pos": 55,
          "end": 56,
        },
      ],
      "pos": 27,
      "end": 56,
    },
  ],
  "pos": 0,
  "end": 56,
}
`;

exports[`Autolinks (extension) <https://github.github.com/gfm/#example-624> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "www.google.com/search?q=Markup+(business)",
              "pos": 0,
              "end": 41,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "http://www.google.com/search?q=Markup+(business)",
          },
          "pos": 0,
          "end": 41,
        },
      ],
      "pos": 0,
      "end": 41,
    },
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "www.google.com/search?q=Markup+(business)",
              "pos": 43,
              "end": 84,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "http://www.google.com/search?q=Markup+(business)",
          },
          "pos": 43,
          "end": 84,
        },
        Run {
          "kind": Run,
          "text": "))",
          "pos": 84,
          "end": 86,
        },
      ],
      "pos": 43,
      "end": 86,
    },
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "(",
          "pos": 88,
          "end": 89,
        },
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "www.google.com/search?q=Markup+(business)",
              "pos": 89,
              "end": 130,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "http://www.google.com/search?q=Markup+(business)",
          },
          "pos": 89,
          "end": 130,
        },
        Run {
          "kind": Run,
          "text": ")",
          "pos": 130,
          "end": 131,
        },
      ],
      "pos": 88,
      "end": 131,
    },
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "(",
          "pos": 133,
          "end": 134,
        },
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "www.google.com/search?q=Markup+(business)",
              "pos": 134,
              "end": 175,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "http://www.google.com/search?q=Markup+(business)",
          },
          "pos": 134,
          "end": 175,
        },
      ],
      "pos": 133,
      "end": 175,
    },
  ],
  "pos": 0,
  "end": 175,
}
`;

exports[`Autolinks (extension) <https://github.github.com/gfm/#example-625> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "www.google.com/search?q=(business))+ok",
              "pos": 0,
              "end": 38,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "http://www.google.com/search?q=(business))+ok",
          },
          "pos": 0,
          "end": 38,
        },
      ],
      "pos": 0,
      "end": 38,
    },
  ],
  "pos": 0,
  "end": 38,
}
`;

exports[`Autolinks (extension) <https://github.github.com/gfm/#example-626> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "www.google.com/search?q=commonmark&hl=en",
              "pos": 0,
              "end": 40,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "http://www.google.com/search?q=commonmark&hl=en",
          },
          "pos": 0,
          "end": 40,
        },
      ],
      "pos": 0,
      "end": 40,
    },
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "www.google.com/search?q=commonmark",
              "pos": 42,
              "end": 76,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "http://www.google.com/search?q=commonmark",
          },
          "pos": 42,
          "end": 76,
        },
        Run {
          "kind": Run,
          "text": "&hl;",
          "pos": 76,
          "end": 80,
        },
      ],
      "pos": 42,
      "end": 80,
    },
  ],
  "pos": 0,
  "end": 80,
}
`;

exports[`Autolinks (extension) <https://github.github.com/gfm/#example-627> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "www.commonmark.org/he",
              "pos": 0,
              "end": 21,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "http://www.commonmark.org/he",
          },
          "pos": 0,
          "end": 21,
        },
        Run {
          "kind": Run,
          "text": "<lp",
          "pos": 21,
          "end": 24,
        },
      ],
      "pos": 0,
      "end": 24,
    },
  ],
  "pos": 0,
  "end": 24,
}
`;

exports[`Autolinks (extension) <https://github.github.com/gfm/#example-628> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "http://commonmark.org",
              "pos": 0,
              "end": 21,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "http://commonmark.org",
          },
          "pos": 0,
          "end": 21,
        },
      ],
      "pos": 0,
      "end": 21,
    },
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "(Visit ",
          "pos": 23,
          "end": 30,
        },
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "https://encrypted.google.com/search?q=Markup+(business)",
              "pos": 30,
              "end": 85,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "https://encrypted.google.com/search?q=Markup+(business)",
          },
          "pos": 30,
          "end": 85,
        },
        Run {
          "kind": Run,
          "text": ")",
          "pos": 85,
          "end": 86,
        },
      ],
      "pos": 23,
      "end": 86,
    },
  ],
  "pos": 0,
  "end": 86,
}
`;

exports[`Autolinks (extension) <https://github.github.com/gfm/#example-629> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "foo@bar.baz",
              "pos": 0,
              "end": 11,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "mailto:foo@bar.baz",
          },
          "pos": 0,
          "end": 11,
        },
      ],
      "pos": 0,
      "end": 11,
    },
  ],
  "pos": 0,
  "end": 11,
}
`;

exports[`Autolinks (extension) <https://github.github.com/gfm/#example-630> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "hello@mail+xyz.example isn't valid, but ",
          "pos": 0,
          "end": 40,
        },
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "hello+xyz@mail.example",
              "pos": 40,
              "end": 62,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "mailto:hello+xyz@mail.example",
          },
          "pos": 40,
          "end": 62,
        },
        Run {
          "kind": Run,
          "text": " is.",
          "pos": 62,
          "end": 66,
        },
      ],
      "pos": 0,
      "end": 66,
    },
  ],
  "pos": 0,
  "end": 66,
}
`;

exports[`Autolinks (extension) <https://github.github.com/gfm/#example-631> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "a.b-c_d@a.b",
              "pos": 0,
              "end": 11,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "mailto:a.b-c_d@a.b",
          },
          "pos": 0,
          "end": 11,
        },
      ],
      "pos": 0,
      "end": 11,
    },
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        MarkdownLink {
          "kind": MarkdownLink,
          "children": Array [
            Run {
              "kind": Run,
              "text": "a.b-c_d@a.b",
              "pos": 13,
              "end": 24,
            },
          ],
          "destination": MarkdownLinkDestination {
            "kind": MarkdownLinkDestination,
            "bracketed": false,
            "href": "mailto:a.b-c_d@a.b",
          },
          "pos": 13,
          "end": 24,
        },
        Run {
          "kind": Run,
          "text": ".",
          "pos": 24,
          "end": 25,
        },
      ],
      "pos": 13,
      "end": 25,
    },
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "a.b-c_d@a.b-",
          "pos": 27,
          "end": 39,
        },
      ],
      "pos": 27,
      "end": 39,
    },
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "a.b-c_d@a.b_",
          "pos": 41,
          "end": 53,
        },
      ],
      "pos": 41,
      "end": 53,
    },
  ],
  "pos": 0,
  "end": 53,
}
`;

exports[`Disallowed Raw HTML (extension) <https://github.github.com/gfm/#example-653> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        MarkdownHtmlInline {
          "kind": MarkdownHtmlInline,
          "html": "<strong>",
          "pos": 0,
          "end": 8,
        },
        Run {
          "kind": Run,
          "text": " ",
          "pos": 8,
          "end": 9,
        },
        MarkdownHtmlInline {
          "kind": MarkdownHtmlInline,
          "html": "<title>",
          "pos": 9,
          "end": 16,
        },
        Run {
          "kind": Run,
          "text": " ",
          "pos": 16,
          "end": 17,
        },
        MarkdownHtmlInline {
          "kind": MarkdownHtmlInline,
          "html": "<style>",
          "pos": 17,
          "end": 24,
        },
        Run {
          "kind": Run,
          "text": " ",
          "pos": 24,
          "end": 25,
        },
        MarkdownHtmlInline {
          "kind": MarkdownHtmlInline,
          "html": "<em>",
          "pos": 25,
          "end": 29,
        },
      ],
      "pos": 0,
      "end": 29,
    },
    MarkdownHtmlBlock {
      "kind": MarkdownHtmlBlock,
      "pos": 31,
      "end": 107,
    },
  ],
  "pos": 0,
  "end": 107,
}
`;

exports[`Strikethrough (extension) <https://github.github.com/gfm/#example-491> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        GfmStrikethroughSpan {
          "kind": GfmStrikethroughSpan,
          "children": Array [
            Run {
              "kind": Run,
              "text": "Hi",
              "pos": 2,
              "end": 4,
            },
          ],
          "pos": 0,
          "end": 6,
        },
        Run {
          "kind": Run,
          "text": " Hello, world!",
          "pos": 6,
          "end": 20,
        },
      ],
      "pos": 0,
      "end": 20,
    },
  ],
  "pos": 0,
  "end": 20,
}
`;

exports[`Strikethrough (extension) <https://github.github.com/gfm/#example-492> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "This ~~has a",
          "pos": 0,
          "end": 12,
        },
      ],
      "pos": 0,
      "end": 12,
    },
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "new paragraph~~.",
          "pos": 14,
          "end": 30,
        },
      ],
      "pos": 14,
      "end": 30,
    },
  ],
  "pos": 0,
  "end": 30,
}
`;

exports[`Tables (extension) <https://github.github.com/gfm/#example-198> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    GfmTable {
      "kind": GfmTable,
      "children": Array [
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "foo",
                  "pos": 2,
                  "end": 5,
                },
              ],
              "pos": 1,
              "end": 6,
            },
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "bar",
                  "pos": 8,
                  "end": 11,
                },
              ],
              "pos": 7,
              "end": 12,
            },
          ],
          "pos": 0,
          "end": 13,
        },
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "baz",
                  "pos": 30,
                  "end": 33,
                },
              ],
              "pos": 29,
              "end": 34,
            },
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "bim",
                  "pos": 36,
                  "end": 39,
                },
              ],
              "pos": 35,
              "end": 40,
            },
          ],
          "pos": 28,
          "end": 41,
        },
      ],
      "pos": 0,
      "end": 41,
    },
  ],
  "pos": 0,
  "end": 41,
}
`;

exports[`Tables (extension) <https://github.github.com/gfm/#example-199> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    GfmTable {
      "kind": GfmTable,
      "children": Array [
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "abc",
                  "pos": 2,
                  "end": 5,
                },
              ],
              "pos": 1,
              "end": 6,
            },
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "defghi",
                  "pos": 8,
                  "end": 14,
                },
              ],
              "pos": 7,
              "end": 15,
            },
          ],
          "pos": 0,
          "end": 16,
        },
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "bar",
                  "pos": 36,
                  "end": 39,
                },
              ],
              "pos": 36,
              "end": 40,
            },
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "baz",
                  "pos": 42,
                  "end": 45,
                },
              ],
              "pos": 41,
              "end": 45,
            },
          ],
          "pos": 36,
          "end": 45,
        },
      ],
      "pos": 0,
      "end": 45,
    },
  ],
  "pos": 0,
  "end": 45,
}
`;

exports[`Tables (extension) <https://github.github.com/gfm/#example-200> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    GfmTable {
      "kind": GfmTable,
      "children": Array [
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "f|oo",
                  "pos": 2,
                  "end": 7,
                },
              ],
              "pos": 1,
              "end": 9,
            },
          ],
          "pos": 0,
          "end": 10,
        },
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "b ",
                  "pos": 24,
                  "end": 26,
                },
                MarkdownCodeSpan {
                  "kind": MarkdownCodeSpan,
                  "backtickCount": 1,
                  "text": "|",
                  "pos": 26,
                  "end": 30,
                },
                Run {
                  "kind": Run,
                  "text": " az",
                  "pos": 30,
                  "end": 33,
                },
              ],
              "pos": 23,
              "end": 34,
            },
          ],
          "pos": 22,
          "end": 35,
        },
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "b ",
                  "pos": 38,
                  "end": 40,
                },
                MarkdownStrongSpan {
                  "kind": MarkdownStrongSpan,
                  "children": Array [
                    Run {
                      "kind": Run,
                      "text": "|",
                      "pos": 42,
                      "end": 44,
                    },
                  ],
                  "pos": 40,
                  "end": 46,
                },
                Run {
                  "kind": Run,
                  "text": " im",
                  "pos": 46,
                  "end": 49,
                },
              ],
              "pos": 37,
              "end": 50,
            },
          ],
          "pos": 36,
          "end": 51,
        },
      ],
      "pos": 0,
      "end": 51,
    },
  ],
  "pos": 0,
  "end": 51,
}
`;

exports[`Tables (extension) <https://github.github.com/gfm/#example-201> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    GfmTable {
      "kind": GfmTable,
      "children": Array [
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "abc",
                  "pos": 2,
                  "end": 5,
                },
              ],
              "pos": 1,
              "end": 6,
            },
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "def",
                  "pos": 8,
                  "end": 11,
                },
              ],
              "pos": 7,
              "end": 12,
            },
          ],
          "pos": 0,
          "end": 13,
        },
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "bar",
                  "pos": 30,
                  "end": 33,
                },
              ],
              "pos": 29,
              "end": 34,
            },
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "baz",
                  "pos": 36,
                  "end": 39,
                },
              ],
              "pos": 35,
              "end": 40,
            },
          ],
          "pos": 28,
          "end": 41,
        },
      ],
      "pos": 0,
      "end": 41,
    },
    MarkdownBlockQuote {
      "kind": MarkdownBlockQuote,
      "children": Array [
        MarkdownParagraph {
          "kind": MarkdownParagraph,
          "children": Array [
            Run {
              "kind": Run,
              "text": "bar",
              "pos": 44,
              "end": 47,
            },
          ],
          "pos": 44,
          "end": 47,
        },
      ],
      "pos": 42,
      "end": 47,
    },
  ],
  "pos": 0,
  "end": 47,
}
`;

exports[`Tables (extension) <https://github.github.com/gfm/#example-202> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    GfmTable {
      "kind": GfmTable,
      "children": Array [
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "abc",
                  "pos": 2,
                  "end": 5,
                },
              ],
              "pos": 1,
              "end": 6,
            },
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "def",
                  "pos": 8,
                  "end": 11,
                },
              ],
              "pos": 7,
              "end": 12,
            },
          ],
          "pos": 0,
          "end": 13,
        },
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "bar",
                  "pos": 30,
                  "end": 33,
                },
              ],
              "pos": 29,
              "end": 34,
            },
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "baz",
                  "pos": 36,
                  "end": 39,
                },
              ],
              "pos": 35,
              "end": 40,
            },
          ],
          "pos": 28,
          "end": 41,
        },
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "bar",
                  "pos": 42,
                  "end": 45,
                },
              ],
              "pos": 42,
              "end": 45,
            },
            GfmTableCell {
              "kind": GfmTableCell,
            },
          ],
          "pos": 42,
          "end": 45,
        },
      ],
      "pos": 0,
      "end": 45,
    },
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "bar",
          "pos": 47,
          "end": 50,
        },
      ],
      "pos": 47,
      "end": 50,
    },
  ],
  "pos": 0,
  "end": 50,
}
`;

exports[`Tables (extension) <https://github.github.com/gfm/#example-203> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "| abc | def |",
          "pos": 0,
          "end": 13,
        },
        MarkdownSoftBreak {
          "kind": MarkdownSoftBreak,
          "pos": 13,
          "end": 14,
        },
        Run {
          "kind": Run,
          "text": "| --- |",
          "pos": 14,
          "end": 21,
        },
        MarkdownSoftBreak {
          "kind": MarkdownSoftBreak,
          "pos": 21,
          "end": 22,
        },
        Run {
          "kind": Run,
          "text": "| bar |",
          "pos": 22,
          "end": 29,
        },
      ],
      "pos": 0,
      "end": 29,
    },
  ],
  "pos": 0,
  "end": 29,
}
`;

exports[`Tables (extension) <https://github.github.com/gfm/#example-204> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    GfmTable {
      "kind": GfmTable,
      "children": Array [
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "abc",
                  "pos": 2,
                  "end": 5,
                },
              ],
              "pos": 1,
              "end": 6,
            },
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "def",
                  "pos": 8,
                  "end": 11,
                },
              ],
              "pos": 7,
              "end": 12,
            },
          ],
          "pos": 0,
          "end": 13,
        },
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "bar",
                  "pos": 30,
                  "end": 33,
                },
              ],
              "pos": 29,
              "end": 34,
            },
            GfmTableCell {
              "kind": GfmTableCell,
            },
          ],
          "pos": 28,
          "end": 35,
        },
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "bar",
                  "pos": 38,
                  "end": 41,
                },
              ],
              "pos": 37,
              "end": 42,
            },
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "baz",
                  "pos": 44,
                  "end": 47,
                },
              ],
              "pos": 43,
              "end": 48,
            },
          ],
          "pos": 36,
          "end": 55,
        },
      ],
      "pos": 0,
      "end": 55,
    },
  ],
  "pos": 0,
  "end": 55,
}
`;

exports[`Tables (extension) <https://github.github.com/gfm/#example-205> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    GfmTable {
      "kind": GfmTable,
      "children": Array [
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "abc",
                  "pos": 2,
                  "end": 5,
                },
              ],
              "pos": 1,
              "end": 6,
            },
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "def",
                  "pos": 8,
                  "end": 11,
                },
              ],
              "pos": 7,
              "end": 12,
            },
          ],
          "pos": 0,
          "end": 13,
        },
      ],
      "pos": 0,
      "end": 27,
    },
  ],
  "pos": 0,
  "end": 27,
}
`;

exports[`Tables (extension) Paragraph before table 1`] = `
Document {
  "kind": Document,
  "children": Array [
    MarkdownParagraph {
      "kind": MarkdownParagraph,
      "children": Array [
        Run {
          "kind": Run,
          "text": "para",
          "pos": 0,
          "end": 4,
        },
      ],
      "pos": 0,
      "end": 4,
    },
    GfmTable {
      "kind": GfmTable,
      "children": Array [
        GfmTableRow {
          "kind": GfmTableRow,
          "children": Array [
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "abc",
                  "pos": 7,
                  "end": 10,
                },
              ],
              "pos": 6,
              "end": 11,
            },
            GfmTableCell {
              "kind": GfmTableCell,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "def",
                  "pos": 13,
                  "end": 16,
                },
              ],
              "pos": 12,
              "end": 17,
            },
          ],
          "pos": 5,
          "end": 18,
        },
      ],
      "pos": 5,
      "end": 32,
    },
  ],
  "pos": 0,
  "end": 32,
}
`;

exports[`Task list items (extension) <https://github.github.com/gfm/#example-279> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    GfmTaskList {
      "kind": GfmTaskList,
      "children": Array [
        GfmTaskListItem {
          "kind": GfmTaskListItem,
          "children": Array [
            MarkdownParagraph {
              "kind": MarkdownParagraph,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "foo",
                  "pos": 6,
                  "end": 9,
                },
              ],
              "pos": 6,
              "end": 9,
            },
          ],
          "pos": 0,
          "end": 9,
        },
        GfmTaskListItem {
          "kind": GfmTaskListItem,
          "children": Array [
            MarkdownParagraph {
              "kind": MarkdownParagraph,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "bar",
                  "pos": 16,
                  "end": 19,
                },
              ],
              "pos": 16,
              "end": 19,
            },
          ],
          "pos": 10,
          "end": 19,
        },
      ],
      "pos": 0,
      "end": 19,
    },
  ],
  "pos": 0,
  "end": 19,
}
`;

exports[`Task list items (extension) <https://github.github.com/gfm/#example-280> 1`] = `
Document {
  "kind": Document,
  "children": Array [
    GfmTaskList {
      "kind": GfmTaskList,
      "children": Array [
        GfmTaskListItem {
          "kind": GfmTaskListItem,
          "children": Array [
            MarkdownParagraph {
              "kind": MarkdownParagraph,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "foo",
                  "pos": 6,
                  "end": 9,
                },
              ],
              "pos": 6,
              "end": 9,
            },
            GfmTaskList {
              "kind": GfmTaskList,
              "children": Array [
                GfmTaskListItem {
                  "kind": GfmTaskListItem,
                  "children": Array [
                    MarkdownParagraph {
                      "kind": MarkdownParagraph,
                      "children": Array [
                        Run {
                          "kind": Run,
                          "text": "bar",
                          "pos": 18,
                          "end": 21,
                        },
                      ],
                      "pos": 18,
                      "end": 21,
                    },
                  ],
                  "pos": 12,
                  "end": 21,
                },
                GfmTaskListItem {
                  "kind": GfmTaskListItem,
                  "children": Array [
                    MarkdownParagraph {
                      "kind": MarkdownParagraph,
                      "children": Array [
                        Run {
                          "kind": Run,
                          "text": "baz",
                          "pos": 30,
                          "end": 33,
                        },
                      ],
                      "pos": 30,
                      "end": 33,
                    },
                  ],
                  "pos": 24,
                  "end": 33,
                },
              ],
              "pos": 12,
              "end": 33,
            },
          ],
          "pos": 0,
          "end": 33,
        },
        GfmTaskListItem {
          "kind": GfmTaskListItem,
          "children": Array [
            MarkdownParagraph {
              "kind": MarkdownParagraph,
              "children": Array [
                Run {
                  "kind": Run,
                  "text": "bim",
                  "pos": 40,
                  "end": 43,
                },
              ],
              "pos": 40,
              "end": 43,
            },
          ],
          "pos": 34,
          "end": 43,
        },
      ],
      "pos": 0,
      "end": 43,
    },
  ],
  "pos": 0,
  "end": 43,
}
`;
